# ap_project

./: .gitignore  CMakeLists.txt  Mane.txt
gui/: ap_gui.pro  apgui.ui
gui/incl/: apgui.hpp
gui/src/: CMakeLists.txt  apgui.cpp  main.cpp
incl/: calculationloop.hpp  core.hpp  dataholder.hpp
src/: CMakeLists.txt  calculationloop.cpp  core.cpp  dataholder.cpp  main.cpp
